
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_interface", "ros_package")

# Interfaces

ros_interface(
    name = "msg__Accel",
    src = "msg/Accel.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Vector3",
    ],
)

ros_interface(
    name = "msg__AccelStamped",
    src = "msg/AccelStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Accel",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__AccelWithCovariance",
    src = "msg/AccelWithCovariance.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Accel",
    ],
)

ros_interface(
    name = "msg__AccelWithCovarianceStamped",
    src = "msg/AccelWithCovarianceStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__AccelWithCovariance",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Inertia",
    src = "msg/Inertia.msg",
    visibility = ["//visibility:public"],
    deps = [
        "@geometry_msgs//:msg__Vector3",
    ],
)

ros_interface(
    name = "msg__InertiaStamped",
    src = "msg/InertiaStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Inertia",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Point",
    src = "msg/Point.msg",
    visibility = ["//visibility:public"],
)

ros_interface(
    name = "msg__Point32",
    src = "msg/Point32.msg",
    visibility = ["//visibility:public"],
)

ros_interface(
    name = "msg__PointStamped",
    src = "msg/PointStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Point",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Polygon",
    src = "msg/Polygon.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Point32",
    ],
)

ros_interface(
    name = "msg__PolygonInstance",
    src = "msg/PolygonInstance.msg",
    visibility = ["//visibility:public"],
    deps = [
        "@geometry_msgs//:msg__Polygon",
    ],
)

ros_interface(
    name = "msg__PolygonInstanceStamped",
    src = "msg/PolygonInstanceStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        "@geometry_msgs//:msg__PolygonInstance",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__PolygonStamped",
    src = "msg/PolygonStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Polygon",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Pose",
    src = "msg/Pose.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Point",
        ":msg__Quaternion",
    ],
)

ros_interface(
    name = "msg__PoseArray",
    src = "msg/PoseArray.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Pose",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__PoseStamped",
    src = "msg/PoseStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Pose",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__PoseWithCovariance",
    src = "msg/PoseWithCovariance.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Pose",
    ],
)

ros_interface(
    name = "msg__PoseWithCovarianceStamped",
    src = "msg/PoseWithCovarianceStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__PoseWithCovariance",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Quaternion",
    src = "msg/Quaternion.msg",
    visibility = ["//visibility:public"],
)

ros_interface(
    name = "msg__QuaternionStamped",
    src = "msg/QuaternionStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Quaternion",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Transform",
    src = "msg/Transform.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Quaternion",
        ":msg__Vector3",
    ],
)

ros_interface(
    name = "msg__TransformStamped",
    src = "msg/TransformStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Transform",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Twist",
    src = "msg/Twist.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Vector3",
    ],
)

ros_interface(
    name = "msg__TwistStamped",
    src = "msg/TwistStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Twist",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__TwistWithCovariance",
    src = "msg/TwistWithCovariance.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Twist",
    ],
)

ros_interface(
    name = "msg__TwistWithCovarianceStamped",
    src = "msg/TwistWithCovarianceStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__TwistWithCovariance",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Vector3",
    src = "msg/Vector3.msg",
    visibility = ["//visibility:public"],
)

ros_interface(
    name = "msg__Vector3Stamped",
    src = "msg/Vector3Stamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Vector3",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__VelocityStamped",
    src = "msg/VelocityStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Twist",
        "@std_msgs//:msg__Header",
    ],
)

ros_interface(
    name = "msg__Wrench",
    src = "msg/Wrench.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Vector3",
    ],
)

ros_interface(
    name = "msg__WrenchStamped",
    src = "msg/WrenchStamped.msg",
    visibility = ["//visibility:public"],
    deps = [
        ":msg__Wrench",
        "@std_msgs//:msg__Header",
    ],
)

# Package

ros_package(
    name = "geometry_msgs",
    interfaces = [
        ":msg__Accel",
        ":msg__AccelStamped",
        ":msg__AccelWithCovariance",
        ":msg__AccelWithCovarianceStamped",
        ":msg__Inertia",
        ":msg__InertiaStamped",
        ":msg__Point",
        ":msg__Point32",
        ":msg__PointStamped",
        ":msg__Polygon",
        ":msg__PolygonInstance",
        ":msg__PolygonInstanceStamped",
        ":msg__PolygonStamped",
        ":msg__Pose",
        ":msg__PoseArray",
        ":msg__PoseStamped",
        ":msg__PoseWithCovariance",
        ":msg__PoseWithCovarianceStamped",
        ":msg__Quaternion",
        ":msg__QuaternionStamped",
        ":msg__Transform",
        ":msg__TransformStamped",
        ":msg__Twist",
        ":msg__TwistStamped",
        ":msg__TwistWithCovariance",
        ":msg__TwistWithCovarianceStamped",
        ":msg__Vector3",
        ":msg__Vector3Stamped",
        ":msg__VelocityStamped",
        ":msg__Wrench",
        ":msg__WrenchStamped",
    ],
    visibility = ["//visibility:public"],
)
