
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@ros//:defs.bzl", "ros_interface")

package(default_visibility = ["//visibility:public"])

# Interfaces

ros_interface(
    name = "srv__DescribeParameters",
    src = "srv/DescribeParameters.srv",
    deps = [
        ":msg__ParameterDescriptor",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "msg__FloatingPointRange",
    src = "msg/FloatingPointRange.msg",
)

ros_interface(
    name = "srv__GetLoggerLevels",
    src = "srv/GetLoggerLevels.srv",
    deps = [
        ":msg__LoggerLevel",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "srv__GetParameterTypes",
    src = "srv/GetParameterTypes.srv",
    deps = [
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "srv__GetParameters",
    src = "srv/GetParameters.srv",
    deps = [
        ":msg__ParameterValue",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "msg__IntegerRange",
    src = "msg/IntegerRange.msg",
)

ros_interface(
    name = "srv__ListParameters",
    src = "srv/ListParameters.srv",
    deps = [
        ":msg__ListParametersResult",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "msg__ListParametersResult",
    src = "msg/ListParametersResult.msg",
)

ros_interface(
    name = "msg__Log",
    src = "msg/Log.msg",
    deps = [
        "@builtin_interfaces//:msg__Time",
    ],
)

ros_interface(
    name = "msg__LoggerLevel",
    src = "msg/LoggerLevel.msg",
)

ros_interface(
    name = "msg__Parameter",
    src = "msg/Parameter.msg",
    deps = [
        ":msg__ParameterValue",
    ],
)

ros_interface(
    name = "msg__ParameterDescriptor",
    src = "msg/ParameterDescriptor.msg",
    deps = [
        ":msg__FloatingPointRange",
        ":msg__IntegerRange",
    ],
)

ros_interface(
    name = "msg__ParameterEvent",
    src = "msg/ParameterEvent.msg",
    deps = [
        ":msg__Parameter",
        "@builtin_interfaces//:msg__Time",
    ],
)

ros_interface(
    name = "msg__ParameterEventDescriptors",
    src = "msg/ParameterEventDescriptors.msg",
    deps = [
        ":msg__ParameterDescriptor",
    ],
)

ros_interface(
    name = "msg__ParameterType",
    src = "msg/ParameterType.msg",
)

ros_interface(
    name = "msg__ParameterValue",
    src = "msg/ParameterValue.msg",
)

ros_interface(
    name = "srv__SetLoggerLevels",
    src = "srv/SetLoggerLevels.srv",
    deps = [
        ":msg__LoggerLevel",
        ":msg__SetLoggerLevelsResult",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "msg__SetLoggerLevelsResult",
    src = "msg/SetLoggerLevelsResult.msg",
)

ros_interface(
    name = "srv__SetParameters",
    src = "srv/SetParameters.srv",
    deps = [
        ":msg__Parameter",
        ":msg__SetParametersResult",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "srv__SetParametersAtomically",
    src = "srv/SetParametersAtomically.srv",
    deps = [
        ":msg__Parameter",
        ":msg__SetParametersResult",
        # Services have implicit deps
        "@service_msgs//:msg__ServiceEventInfo",
    ],
)

ros_interface(
    name = "msg__SetParametersResult",
    src = "msg/SetParametersResult.msg",
)
