
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Imports

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@ros//:defs.bzl", "ros_package")

# ROS C/C++ libraries

# ros_cc_library(
#     name = "dummy_compile_test",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_compile_warnings.cpp",
#     ],
#     includes = [
#         "include",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Werror",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#         "dummy_compile_test_EXPORTS",
#     ],
#     linkopts = [
#         "-ldl",
#     ],
#     deps = [
#         ":rcpputils",
#         "@rcutils",
#     ],
# )

# ros_cc_library(
#     name = "dummy_shared_library",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/dummy_shared_library/dummy_shared_library.c",
#     ],
#     copts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu11",
#     ],
#     defines = [
#         "ROS_PACKAGE_NAME=rcpputils",
#         "dummy_shared_library_EXPORTS",
#     ],
# )

cc_library(
    name = "rcpputils",
    srcs = [
        "src/asserts.cpp",
        "src/env.cpp",
        "src/filesystem_helper.cpp",
        "src/find_library.cpp",
        "src/process.cpp",
        "src/shared_library.cpp",
        "src/thread_name.cpp",
    ],
    hdrs = glob(["include/**/*.hpp"]),
    includes = ["include"],
    cxxopts = [
        "-Wall",
        "-Wextra",
        "-Wpedantic",
        "-fPIC",
        "-std=gnu++17",
    ],
    local_defines = [
        "ROS_PACKAGE_NAME=\\\"rcpputils\\\"",
    ],
    deps = [
        "@rcutils"
    ],
    visibility = ["//visibility:public"],
)

# ros_cc_library(
#     name = "test_library",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_library.cpp",
#     ],
#     includes = [
#         "include",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#         "test_library_EXPORTS",
#     ],
#     linkopts = [
#         "-ldl",
#     ],
#     deps = [
#         ":rcpputils",
#         "@rcutils",
#     ],
# )

# # ROS C/C++ tests

# ros_cc_test(
#     name = "test_accumulator",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_accumulator.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_asserts_debug",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_asserts.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_asserts_ndebug",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_asserts.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "NDEBUG",
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_endian",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_endian.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_env",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_env.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_filesystem_helper",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_filesystem_helper.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_filesystem_helper_std",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_filesystem_helper_std.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_find_and_replace",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_find_and_replace.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_find_library",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_find_library.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         ":test_library",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_join",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_join.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_pointer_traits",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_pointer_traits.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_process",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_process.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_scope_exit",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_scope_exit.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_shared_library",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_shared_library.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_split",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_split.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_thread_name",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_thread_name.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_thread_safety_annotations",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_thread_safety_annotations.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_time",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_time.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# ros_cc_test(
#     name = "test_unique_lock",
#     visibility = ["//visibility:public"],
#     srcs = [
#         "test/test_unique_lock.cpp",
#     ],
#     cxxopts = [
#         "-Wall",
#         "-Wextra",
#         "-Wpedantic",
#         "-fPIC",
#         "-std=gnu++17",
#     ],
#     defines = [
#         "RCUTILS_ENABLE_FAULT_INJECTION",
#         "ROS_PACKAGE_NAME=rcpputils",
#     ],
#     linkopts = [
#         "-ldl",
#         "-pthread",
#     ],
#     deps = [
#         ":rcpputils",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#         "@rcutils",
#     ],
# )

# Package

ros_package(
    name = "rcpputils",
)
